[no ci] Document Gatling --add-opens and v2 embedded-server gotchas
Adds three migration learnings surfaced by the karate-todo v1→v2 port:

- Gatling 4.7 on Java 17/21 crashes with IllegalAccessException on
  java.lang; the gatling-maven-plugin needs
  --add-opens=java.base/java.lang=ALL-UNNAMED.
- v2's HttpServer startup pattern: before/after snippet showing
  HttpServer.config(...).build() -> HttpServer.start(port, handler),
  plus the two silent gotchas: sessions only work when a SessionStore
  is configured (context.init is a no-op otherwise), and CSRF is on
  by default (API-only test backends need csrfEnabled(false)).
- Checklist items for both.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>